# Bank

./: !cmake.sh  Bank.pro  CMakeLists.txt  hystory.txt  resource.qrc
share/languages/: Bank_ru.qm
src/: Bank.ts  adddialog.cpp  adddialog.h  main.cpp  mainwindowimpl.cpp  mainwindowimpl.h  preferences.cpp  preferences.h  qmyadddialog.cpp  qmyadddialog.h  qmypreferences.cpp  qmypreferences.h
